# test

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  PanTompkins_test  cmake_install.cmake  libPanTompkins.dylib  panTompkins.c  panTompkins.h
dart_plugin/: pantompkins_ffigen.yaml  pubspec.yaml
dart_plugin/files/: ecg_sinus_copy.csv  input.txt  output.txt
dart_plugin/lib/: pan_tompkins.dart
dart_plugin/panTompkins/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  libpanTompkins.dylib  panTompkins.c  panTompkins.h  panTompkins_test
flutter_example/: pubspec.yaml
flutter_example/ios/Runner.xcodeproj/: project.pbxproj
flutter_example/lib/: main.dart
pantompkins_plugin/: README.md  ffigen.yaml  pubspec.yaml
pantompkins_plugin/android/: build.gradle  settings.gradle
pantompkins_plugin/android/src/main/: AndroidManifest.xml
pantompkins_plugin/ios/: pantompkins_plugin.podspec
pantompkins_plugin/ios/Classes/: pantompkins_plugin.c
pantompkins_plugin/lib/: pantompkins_plugin.dart  pantompkins_plugin_bindings_generated.dart
pantompkins_plugin/src/: CMakeLists.txt  pantompkins_plugin.c
